feat: 장소 후보 결과에 대해 각 참여자 별 경로 표현 구현 (#50)